# Local-First-Observability-Runtime-SDK-Provisioned-

./: .dockerignore  .gitignore  .lintstagedrc.json  .prettierignore  README.md  commitlint.config.js  package-lock.json  package.json
.husky/: commit-msg
apps/api/: .env.example  package.json
apps/api/src/: app.module.ts  main.ts
apps/api/src/health/: health.service.ts
apps/api/src/messaging/: messaging.module.ts
apps/api/src/messaging/controllers/: dlq.controller.ts
apps/api/src/messaging/interfaces/: dlq.interface.ts  event-publisher.interface.ts  (+1 more)
apps/api/src/metrics/: metrics.service.ts
apps/api/src/test/: test.controller.ts  test.module.ts
apps/collector/: .env.example  .gitignore  Cargo.toml  README.md
apps/collector/examples/: classification_demo.ts  publish_retry_test.rs  publish_test.rs
apps/collector/scripts/: publish_messages.py  publish_test_messages.sh  test_classification.sh
apps/collector/src/: lib.rs  main.rs
apps/collector/src/adapters/: mod.rs
apps/collector/src/config/: mod.rs
apps/collector/src/contracts/: mod.rs  processing_error.rs
apps/collector/src/messaging/: channel.rs  connection.rs  consumer.rs  handler.rs  mod.rs
apps/collector/src/metrics/: mod.rs  server.rs
apps/collector/src/processors/: mod.rs
contracts/typescript/: example.ts  package-lock.json  package.json
contracts/typescript/src/: base.ts  index.ts
contracts/typescript/src/telemetry/: log-captured.v1.ts
docs/: architecture.md  message-classification.md
infra/docker/: .env.example  docker-compose.yml  prometheus.yml
(+4 files in other folders)
