[package]
name = "observability-collector"
version = "0.1.0"
edition = "2025"
authors = ["Bohdan Biliak bohdam.biliak.detrox@gmail.com"]
description = "Telemetry collector service for local observability runtime"

[[bin]]
name = "collector"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Structured logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]

