[package]
name = "observability-collector"
version = "0.1.0"
edition = "2024"
authors = ["Bohdan Biliak bohdam.biliak.detrox@gmail.com"]
description = "Telemetry collector service for local observability runtime"

[[bin]]
name = "collector"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Structured logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
thiserror = "1.0"

# RabbitMQ client
lapin = "2.3"

# Async trait support
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]

